# neural_network_examples

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
feed_forward/image_classification/: dnn_utils.py  image_classification.py  model.py  n_layer.yaml  n_layer_nn.py  torch_model.py  two_layer.yaml  two_layer_nn.py
feed_forward/image_classification/data_loader/: data_loader.py
feed_forward/image_classification/manual/: dnn_utils.py
feed_forward/image_classification/manual/eval/: manual_eval.py
feed_forward/image_classification/manual/n_layer/: n_layer.yaml  n_layer_nn.py
feed_forward/image_classification/manual/two_layer/: two_layer.yaml  two_layer_nn.py
feed_forward/image_classification/pytorch/: torch.yaml  torch_model.py
feed_forward/image_classification/tests/: config_tests.py  model_factory_tests.py
feed_forward/image_classification/tests/resources/: invalid.yaml  n_layer_happy.yaml
utils/: configuration.py  factory.py
